# Company_Sales_Forecasting

./: .gitignore  LICENSE  README.md  exploratory.ipynb  main.ipynb  model_settings.yaml  pipeline_settings.yaml  pyproject.toml
config/: .env.example  model_settings.yaml  pipeline_settings.yaml
src/: logger_config.py  pipeline.py  utils.py
src/config/: config.py  config_logger.py  config_model.py
src/etl/: __init__.py  database.py  etl.py
src/files/queries/: raw_sales.sql
src/model/: __init__.py  forecast_model.py
src/settings/: __init__.py  database.py  general.py  model.py  pipeline.py
src/src/: logger_config.py  pipeline.py
src/src/etl/: database.py
src/src/files/queries/: raw_sales.sql
src/src/model/: __init__.py  forecast_model.py
src/src/settings/: database.py  general.py  pipeline.py
