[project]
name = "forecastmodel"
version = "1.0.0"
description = ""
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "docutils>=0.23",
    "notebook>=7.5.7",
    "numpy>=2.4.6",
    "optuna>=4.9.0",
    "pandas>=3.0.3",
    "polars>=1.41.2",
    "prophet>=1.3.0",
    "pyarrow>=24.0.0",
    "pyodbc>=5.3.0",
    "python-dotenv>=1.2.2",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
]
